# ChangeLog for media-video/mplayer-uau
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jun 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  USE="external-ffmpeg" now builds with >=ffmpeg-0.6

  13 Jun 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  fix use symlink && use !encode

*mplayer-uau-9999 (10 Jun 2010)

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +mplayer-uau-9999.ebuild,
  +metadata.xml:
  Initial ebuild
