@@ -2,6 +2,6 @@ DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST svgalib_helper-1.9.17-mplayer.tar.gz 7583 RMD160 927ff34f187e4fa9528e2e48208173d98b3d1d1b SHA1 bf789706d1d79c695f781644c7ea6d57c3eed4c3 SHA256 a6f803f3df4cd4544751d3a3ee936a8bf0e20e32a452639b3f7c7d9e73e65938
-EBUILD mplayer-uau-9999.ebuild 23144 RMD160 08b46f6d123aed656333ea3a421f17f08d67c651 SHA1 cf9374d3793901c53adac1ad7c9d753caa340a88 SHA256 ce50b288a490f92a0479128af4cfcfa58928b3ea890c4917ccc98fef428dd1c5
-MISC ChangeLog 485 RMD160 86c304e1302ba0d1386d042b441fe018092045ce SHA1 5fcb85e61817178713b26d7950778c571674a65b SHA256 0a7163d42320b9932eded94e75654671bae9ccd47b4b6a37ae94c17a93cfdc26
+EBUILD mplayer-uau-9999.ebuild 23773 RMD160 da4ba60b1b9b8a5dc3d6cb06c2bc1201b3945583 SHA1 645be00b0b77ffce1ea3710376bee3effb1b3002 SHA256 18e16d6e28338ab3878fa5fbd5e9ee767b12ffe438be2db330764d3bf58548da
+MISC ChangeLog 614 RMD160 dcd10f8d8d30c049669fac7a643a3907e7cf4e23 SHA1 54e8b395334bd833672edfa60cdbc39e8636b332 SHA256 b90b94393135d0c7c29c7a1a0961317d052b2549d07039dc1fe26e144fb0d5b3
 MISC metadata.xml 4257 RMD160 65763489f8942ab76c3bef1f9a8b9d15e7f3cf9a SHA1 a9f74be76416fb7e67fe426fb607a9131f49d873 SHA256 37b8974580e603dc3881f2213cfbeffc184b1d27aa7660888c943b42ec1e6b03
